--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_module/bootstrap/dist/bootstrap.min.css"
             ],
             "scripts": []
           },
